k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secret-manager
  labels:
    name: secret-manager
    app.kubernetes.io/name: secret-manager
    app.kubernetes.io/part-of: secret-manager
